src/main/resources/webapp/app/content/viewer/viewer.component.css
/*
    Main layout
*/

.viewer
{
    display: table;
}

.viewer .sidebar,
.viewer .editor
{
    vertical-align: top;
}

.viewer .sidebar
{
    display: table-cell;
    padding: 1em 1em 1em 0;
}

.viewer .editor
{
    display: table-cell;
    padding-left: 1em;
    width: 100%;
}


/*
    Layout of editor header
*/

.viewer .editor .header
{
    display: table;
    font-size: 2em;
    padding: 0.5em 0.2em 0.5em 0;
    width: 100%;
}

.viewer .editor .header .button,
.viewer .editor .header .title
{
    display: table-cell;
    vertical-align: middle;
    white-space: nowrap;
}

.viewer .editor .header .title
{
    width: 100%;
}


/*
    Title input field in header
*/

.viewer .editor .header .title .title-input
{
    border: none;
    padding: 0.1em 0.2em;
    width: 100%;
}

.viewer .editor .header .title .title-input:hover,
.viewer .editor .header .title .title-input:focus
{
    outline: solid 1px #ccc;
}

/*
    Input for an entry's value
*/
.viewer .editor #currentValue
{
    min-height: 1em;
    max-height: 30em;
}

